Created button animation on nbit calculator in the 'Calculate' button

--- a/nbit/style.css
+++ b/nbit/style.css
@@ -39,8 +39,14 @@ input{
 	font-size: 17px;
 	border-color:white;
 	border-radius: 6px;
+	margin-top:5px;
+	cursor:pointer;
+	transition:background-color 0.3s, color 0.3s;
 }
-
+.buttonC:hover{
+	background-color:white;
+	color:black;
+}
 .resultLabels{
 	font-size:25px;
 	font-weight:bold;
