--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
 	color:white;
-	background-color:black;
+	background-color:rgba(0,0,0,1);
 	font-family: sans-serif;
 }
 .nbitCalc{
@@ -13,12 +13,9 @@ body{
 	width:200px;
 }
 .hrOne{
-	height:3px;
-	background-color:grey;
-}
-.hrTwo{
-	text-align:left;
-	align-items:left;
+	height:2px;
+	background-color:white;
+	border-radius:5px;
 }
 div{
 }
@@ -52,6 +49,11 @@ button{
 	display:flex;
 	align-items:center;
 	vertical-align:middle;
+	background-color:rgba(0,0,0,0.5);
+	border-color:white;
+	border-width:4px;
+	border-radius:4px;
+	border-style:solid;
 }
 .imgBalla{
 	max-width:100px;
