--- a/nbit/style.css
+++ b/nbit/style.css
@@ -2,9 +2,11 @@ body{
 	color:white;
 	background-color:black;
 	font-family: sans-serif;
+	display:flex;
 }
 .title{
-	text-align:center;	
+	text-align:center;
+	margin-bottom:3px;
 }
 .secBody{
 	align-items:center;
@@ -50,4 +52,18 @@ input{
 .resultLabels{
 	font-size:25px;
 	font-weight:bold;
+}
+.hr{
+	width:300px;
+}
+.totalDiv{
+	border-color:white;
+	border-width:3px;
+	border-radius:2px;
+	border-style:solid;
+	width:320px;
+	padding-bottom:4px;
+	margin-top:6px;
+	margin-left:auto;
+	margin-right:auto;
 }
