--- a/style.css
+++ b/style.css
@@ -17,12 +17,19 @@ body{
 	background-color:white;
 	border-radius:5px;
 }
-div{
-}
 .boxes{
 	display:flex;
 }
-.hz{
+.ex{
+	align-items:center;
+	border-color:white;
+	border-radius:6px;
+	border-style:solid;
+	border-width:2px;
+	margin:10px;
+	padding:5px;
+	width:200px;
+}.hz{
 	align-items:center;
 	border-color:white;
 	border-radius:6px;
